--- a/BlazorApp3/Client/Pages/WatchCustomer.razor
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor
@@ -6,6 +6,11 @@
 
 <PageTitle> test</PageTitle>
 
+@if (showAlert)
+{
+    <MudAlert Severity="Severity.Error" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@check</MudAlert>
+}
+
 @if (movie == null || movieLink == null)
 {
     @if (canWatch == null)
@@ -70,9 +75,12 @@ else
     private string content;
     private string check;
     private List<CommentModel> commentList = new();
-
+    private bool showAlert = false;
     private bool sameDevice = false;
-
+    private void CloseAlert()
+	{
+		showAlert = !showAlert;
+	}
     private int index = 0;
     protected override async Task OnInitializedAsync()
     {
@@ -81,8 +89,17 @@ else
 
         commentList = await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{index}");
 
-        sameDevice = (await _httpClient.PostAsJsonAsync<string>("Customer/UserAgent", await
-        JS.InvokeAsync<string>("getUserAgent"))).IsSuccessStatusCode;
+        try
+            {
+                sameDevice = (await _httpClient.PostAsJsonAsync<string>("Customer/UserAgent", await
+                JS.InvokeAsync<string>("getUserAgent"))).IsSuccessStatusCode;
+            }
+            catch
+            {
+                check = "Turn off AdBlock";
+                showAlert = true;
+                return;
+            }
 
         canWatch = await _httpClient.GetFromJsonAsync<bool>($"Customer/CanWatch/{Id}");
         if (canWatch == true)
@@ -120,6 +137,7 @@ else
             catch
             {
                 check = "Turn off AdBlock";
+                showAlert = true;
                 return;
             }
             
@@ -127,6 +145,7 @@ else
             if (!sameDevice)
             {
                 check = "You cannot watch in many Device at the same time Logout then Login to update your last Device";
+                showAlert = true;
                 StateHasChanged();
             }
 
