--- a/BlazorApp3/Client/Shared/NavMenu.razor
+++ b/BlazorApp3/Client/Shared/NavMenu.razor
@@ -1,6 +1,8 @@
 ﻿@inject IJSRuntime JS
 @inherits LayoutComponentBase
-
+<MudThemeProvider/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
