--- a/BlazorApp3/Client/Pages/Contact.razor
+++ b/BlazorApp3/Client/Pages/Contact.razor
@@ -21,14 +21,14 @@
         <div class="address details">
           <i class="fas fa-map-marker-alt"></i>
           <div class="topic">Address</div>
-          <div class="text-one">Surkhet, NP12</div>
-          <div class="text-two">Birendranagar 06</div>
+          <div class="text-one">HaNoi</div>
+          <div class="text-two">VietNam 06</div>
         </div>
         <div class="phone details">
           <i class="fas fa-phone-alt"></i>
           <div class="topic">Phone</div>
-          <div class="text-one">+0098 9893 5647</div>
-          <div class="text-two">+0096 3434 5678</div>
+          <div class="text-one">+1122 3344 5566</div>
+          <div class="text-two">+0011 3434 5678</div>
         </div>
         <div class="email details">
           <i class="fas fa-envelope"></i>
@@ -39,8 +39,8 @@
       </div>
       <div class="right-side">
         <div class="topic-text">Send us a message</div>
-        <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from
-          here. It's my pleasure to help you.</p>
+        <p>If you have any problems or any types of quries related to my website, you can send a message from
+          here. It's pleasure to help you.</p>
         <EditForm Model="@feedbackMessageModel" OnValidSubmit="SendFeedbackMessage">
           <DataAnnotationsValidator />
           <ValidationSummary />
