--- a/BlazorApp3/Client/Shared/NavMenu.razor
+++ b/BlazorApp3/Client/Shared/NavMenu.razor
@@ -30,7 +30,7 @@
                         <span class="tooltip">Search</span>
                     </li>
                     <li>
-                        <a href="fetchdata">
+                        <a href="home">
                             @*<i class='bx bx-grid-alt'></i>*@
                             <i class='bx bx-home'></i>
                             <span class="links_name">Home</span>
@@ -100,10 +100,10 @@
                             </li>      
                             <li>
                                 <a href="ReadFeedBack">
-                                    <i class='bx bx-movie'></i>
-                                    <span class="links_name">Read Feed Back</span>
+                                    <i class='bx bx-chat'></i>
+                                    <span class="links_name">Feedback Management</span>
                                 </a>
-                                <span class="tooltip">Read Feed Back</span>
+                                <span class="tooltip">Feedback Management</span>
                             </li>  
                         </Authorized>
                     </AuthorizeView>
