--- a/BlazorApp3/Client/Pages/ReadFeedBack.razor
+++ b/BlazorApp3/Client/Pages/ReadFeedBack.razor
@@ -156,6 +156,7 @@ else
     }
     private async Task LoadMore()
     {
+        index++;
         feedbacks.AddRange(await _httpClient.GetFromJsonAsync<List<FeedbackMessageModel>>($"admin/ReadFeedBack/{index}"));
     }
 }
