--- a/BlazorApp3/Client/Pages/StatusStudio.razor
+++ b/BlazorApp3/Client/Pages/StatusStudio.razor
@@ -86,23 +86,26 @@ check.ToString("MM-dd-yyyy") } })).Content.ReadAsStringAsync();
         //commentStatus = await _httpClient.GetFromJsonAsync<List<int>>($"Studio/CommentStatus/{Id}/check");
         try
         {
+            List<DateTime> dateToCheck = new();
             for (DateTime i = start.Date; i <= end.Date; i = i.AddDays(1))
             {
-                commentStatus = await _httpClient.GetFromJsonAsync<List<int>>($"Studio/CommentStatus/{Id}/{i.ToString("MM-dd-yyyy")}");
+                dateToCheck.Add(i);
+            }
 
-
-                List<double> getInfor = await _httpClient.GetFromJsonAsync<List<double>>($"Studio/PayCheck/{Id}/{i.ToString("MM-dd-yyyy")}");
+            Parallel.ForEach(dateToCheck, async date =>
+              {
+                commentStatus = await _httpClient.GetFromJsonAsync<List<int>>($"Studio/CommentStatus/{Id}/{date.ToString("MM-dd-yyyy")}");
+                List<double> getInfor = await _httpClient.GetFromJsonAsync<List<double>>($"Studio/PayCheck/{Id}/{date.ToString("MM-dd-yyyy")}");
                 Dictionary<string, string> dic = new();
-                dic.Add("Date", i.ToString());
+                dic.Add("Date", date.ToString());
                 dic.Add("Positive", commentStatus[0].ToString());
                 dic.Add("Negative", commentStatus[1].ToString());
                 dic.Add("View", getInfor[0].ToString());
                 dic.Add("Buy", getInfor[1].ToString());
-
                 fullStatus.Add(dic);
-
-                content = "";
-            }
+                StateHasChanged();
+              });
+              content = "";
         }
         catch (Exception ex)
         {
