Multi threads optimal (#31)
* Create dependabot.yml (#28)

* Optimal Client

--- a/BlazorApp3/Client/Pages/WatchCustomer.razor
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor
@@ -69,7 +69,7 @@ else
     public string Id { get; set; }
 
     private MovieModel movie;
-    private string movieLink;
+    private string? movieLink = null;
     private bool? canWatch;
     private string Acomment;
     private string content;
@@ -85,14 +85,40 @@ else
     protected override async Task OnInitializedAsync()
     {
 
-        movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Customer/Watch/{Id}");
+        var movieTask = Task.Run(async () =>
+        {
+            movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Customer/Watch/{Id}");
+        });
 
-        commentList = await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{index}");
+        var commentTask = Task.Run(async () =>
+        {
+            commentList = await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{index}");
+        });
+
+        var sameDeviceTask = Task.Run(async () =>
+        {
+            sameDevice = (await _httpClient.PostAsJsonAsync<string>("Customer/UserAgent", await JS.InvokeAsync<string>("getUserAgent"))).IsSuccessStatusCode;
+        });
+
+        var canWatchTask = Task.Run(async () =>
+        {
+            canWatch = await _httpClient.GetFromJsonAsync<bool>($"Customer/CanWatch/{Id}");
+            Console.WriteLine("Done");
+        });
+        char[] tokena = { };
+
+
+        var tokenaTask = Task.Run(async () =>
+        {
+           tokena   =  await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
+            
+        });
+        string token = new string(tokena);       
+        
 
         try
             {
-                sameDevice = (await _httpClient.PostAsJsonAsync<string>("Customer/UserAgent", await
-                JS.InvokeAsync<string>("getUserAgent"))).IsSuccessStatusCode;
+                await Task.WhenAll(movieTask, commentTask, sameDeviceTask, canWatchTask, tokenaTask);
             }
             catch
             {
@@ -101,11 +127,10 @@ else
                 return;
             }
 
-        canWatch = await _httpClient.GetFromJsonAsync<bool>($"Customer/CanWatch/{Id}");
+
         if (canWatch == true)
         {
-            char[] tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
-            string token = new string(tokena);
+            
             try
             {
                 movieLink = await new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions
@@ -117,8 +142,9 @@ else
                 TimeSpan.FromHours(2)
                 }).Child(movie.StudioId).Child(movie.MovieId).Child("Movie").GetDownloadUrlAsync();
             }
-            catch
+            catch(Exception ex)
             {
+                content = ex.Message;
             }
         }
     }
