--- a/BlazorApp3/Client/Shared/NavMenu.razor
+++ b/BlazorApp3/Client/Shared/NavMenu.razor
@@ -112,9 +112,9 @@
                             <li>
                                 <a href="MovieCustomer">
                                     <i class='bx bx-movie-play'></i>
-                                    <span class="links_name">Movie Customer</span>
+                                    <span class="links_name">Movie</span>
                                 </a>
-                                <span class="tooltip">Movie Customer</span>
+                                <span class="tooltip">Movie</span>
                             </li>
 
                             <li>
